<resources>
  <string name="cancel_label">Cancel</string>
  <string name="search_word_hint">Search Word</string>
  <string name="add_joke">Add a new joke</string>
  <string name="sample_joke">sample joke!</string>
  <string name="favorite_jokes_pref_key">favorite_jokes_pref_key</string>
  <string name="favorite_jokes_pref_title">Number of favorite jokes</string>
  <string name="audio_pref_key">audio_pref_key</string>
  <string name="audio_pref_title">Audio volume</string>
  <!-- Preference Titles -->
  <string name="messages_header">Messages</string>
  <string name="sync_header">Sync</string>

  <!-- Messages Preferences -->
  <string name="signature_title">Your signature</string>
  <string name="reply_title">Default reply action</string>

  <!-- Sync Preferences -->
  <string name="sync_title">Sync email periodically</string>
  <string name="attachment_title">Download incoming attachments</string>
  <string name="attachment_summary_on">Automatically download attachments for incoming emails
  </string>
  <string name="attachment_summary_off">Only download attachments when manually requested</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="search_description">Search</string>
  <string name="search_label">Search</string>
  <string name="joke_not_found_message">No joke found for search term</string>
  <string name="save_joke">Save joke</string>
  <string name="delete_joke">Delete joke</string>
  <string name="remove_from_favorites">Remove from favorites</string>
</resources>