<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".controller.SearchFragment">

  <ImageView
    android:id="@+id/dog"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:src="@drawable/dog"
    android:scaleType="centerInside"
    android:visibility="invisible"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:ignore="ContentDescription"/>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/search_word_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_dynamic_spacing"
    app:hintEnabled="true"
    app:hintAnimationEnabled="true"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@id/search">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/search_word"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text"
      android:hint="@string/search_word_hint"/>


  </com.google.android.material.textfield.TextInputLayout>


  <ImageButton
    android:id="@+id/search"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/half_dynamic_spacing"
    android:src="@drawable/ic_baseline_search_24"
    android:tint="@color/submit"
    android:background="?android:selectableItemBackground"
    app:layout_constraintTop_toTopOf="@id/search_word_layout"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="@id/search_word_layout"
    android:contentDescription="@string/search_description"
    android:tooltipText="@string/search_description"/>

  <TextView
    android:id="@+id/joke"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_margin="@dimen/half_dynamic_spacing"
    android:autoSizeTextType="uniform"
    android:autoSizeMaxTextSize="60sp"
    android:textAlignment="center"
    android:layout_gravity="center"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@id/search_word_layout"/>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/unfilled_heart"
    android:layout_width="64dp"
    android:layout_height="64dp"
    android:layout_margin="@dimen/half_dynamic_spacing"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:src="@drawable/ic_baseline_favorite_border_24"
    android:contentDescription="@string/delete_joke"/>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/filled_heart"
    android:layout_width="64dp"
    android:layout_height="64dp"
    android:layout_margin="@dimen/half_dynamic_spacing"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:src="@drawable/ic_baseline_favorite_24"
    android:contentDescription="@string/save_joke"/>

</androidx.constraintlayout.widget.ConstraintLayout>